fix(main): improve command-param spacing in tandem with tutorials/hints

--- a/projects/main/src/app/entry/command-param-entry/command-param-entry.component.scss
+++ b/projects/main/src/app/entry/command-param-entry/command-param-entry.component.scss
@@ -4,8 +4,11 @@
   display: block;
   border-radius: 4px;
   box-shadow: $mediumShadow;
-  margin-bottom: $grid * 4;
+  margin-top: $grid * 4;
   overflow: hidden;
+  &:first-of-type {
+    margin-top: 0;
+  }
 }
 
 h3 {
